<resources>
    <string name="app_name">Rent AND Ride</string>
    <string name="book">"Book Now" </string>
    <string name="Where_to">Where to?</string>
    <string name="Pick_up_Location">Pick-up Location</string>
    <string name="Drop_off_Location">Drop-off Location</string>
    <string name="Return_to_different_Location">Return to different Location?</string>
    <string name="Time">Time</string>
    <string name="Pick_up_Date">Pick-up Date</string>
    <string name="Drop_off_Date">Drop-off Date</string>
    <string name="Search_for_Car">Search for Car</string>
    <string name="Due_to_Covid_19_some_destinations_maybe_unavailable_for_certain_dates">
        Due to Covid-19,some destinations maybe unavailable for certain dates. </string>


    <string name="My_Trips">My Bookings</string>
    <string name="Trip1">24/09/2020, 11:30AM</string>
    <string name="Trip2">05/10/2020, 08:00AM</string>
    <string name="Vehicle1">Bajaj RE 205</string>
    <string name="Vehicle2">Honda Freed</string>
    <string name="Details">Details</string>


    <string name="here">Here you go!!!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="OR">OR</string>
    <string name="Resister_Here">Register Here</string>


    <string name="My_Booking">My Booking</string>
    <string name="Pick_up_Details">Pick-up Details</string>
    <string name="Drop_off_Details">Drop-off Details</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="Pickup_Location_deatil">NO 24, Galle Road</string>
    <string name="Pickup_Date_detail">24/09/2020</string>
    <string name="Pickup_Time_detail">11:30:AM</string>
    <string name="Dropoff_Location_deatil">NO 43/1, Nuwara Eliya</string>
    <string name="Dropoff_Date_detail">25/09/2020</string>
    <string name="Dropoff_Time_detail">03:30:PM</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app">Rent Ride</string>
    <string name="hyundai">Hyundai</string>
    <string name="passnegers">4 Passenger(s)</string>
    <string name="bags">1 Bag(s)</string>
    <string name="wifi">Wifi</string>
    <string name="bus">Free Shuttle Bus</string>
    <string name="rs">Rs. 7,050/day</string>
    <string name="details">More Details</string>
    <string name="honda">Honda</string>
    <string name="rupee">Rs. 8,500/day</string>

    <string name="extra">Extras</string>
    <string name="toddler">Child Toddler Seat</string>
    <string name="number">1</string>
    <string name="price">Rs. 9000</string>
    <string name="gps">GPS</string>
    <string name="btnn">Add</string>
    <string name="amt">Rs. 1000</string>
    <string name="ac">Air Conditioning</string>
    <string name="amount">Rs. 1500</string>
    <string name="able">Need a wheel chair</string>
    <string name="bn">Confirm</string>

    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="confirm">Confirm Password*</string>
    <string name="register">Register Now</string>

    <string name="Phone">077-5452369</string>
    <string name="Name">Atara Francis</string>
    <string name="Email">atara91@gmail.com</string>
    <string name="nic">915263698V</string>
    <string name="Address">Gregorys Place Wellawatte</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Driver Details</string>
    <string name="msg1">Please enter the lead driver details.</string>
    <string name="fullname">Full Name:</string>
    <string name="email2">Email:</string>
    <string name="phoneNum">Phone Number:</string>
    <string name="dob">Date of Birth:</string>
    <string name="country">Country/Region:</string>
    <string name="past">Past Trips</string>
    <string name="trips">Rides</string>
    <string name="complete">Trip Completed</string>
    <string name="review">Review</string>

    <string name="paymentui">PAYMENT</string>
    <string name="payment_h">Please select a payment method</string>
    <string name="promo">Promotions</string>
    <string name="addpromo">Add promo code</string>
    <string name="cardpayment1">ADD PAYMENT</string>
    <string name="Enterpay">Enter your card details to use as your payment method</string>
    <string name="cname">Card Holder Name</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="add">ADD</string>
    <string name="add_a_promo_code">Add a promo code</string>
    <string name="code">Code</string>
    <string name="add_promotion">Add Promotion</string>
    <string name="cvv">CVV</string>
    <string name="year">Year</string>
    <string name="Month">Month</string>
    <string name="cardnum">Card Number</string>
    <string name="cashMsg">Pay For Trips in Cash</string>
    <string name="ca_cash">CASH</string>
    <string name="exp">Expiry Date</string>


</resources>



