<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#545481"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/imageview_dehaze"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_dehaze_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="353dp"
        android:layout_height="558dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/cars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="65dp"
        android:fontFamily="serif"
        android:textColor="@color/colorPrimary"
        android:text="@string/hyundai"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/passenger"
        android:text="@string/passnegers"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:textColor="#000"
        android:ems="10"/>

    <TextView
        android:id="@+id/bag"
        android:text="@string/bags"
        android:drawableLeft="@drawable/ic_baseline_card_travel_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textColor="#000"
        android:ems="10"/>

    <TextView
        android:id="@+id/wifi"
        android:text="@string/wifi"
        android:drawableLeft="@drawable/ic_baseline_wifi_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="#000"
        android:ems="10"/>

    <TextView
        android:id="@+id/flight"
        android:text="@string/bus"
        android:drawableLeft="@drawable/ic_baseline_flight_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:textColor="#000"
        android:ems="10"/>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:src="@drawable/hyundai"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/rate"
        android:text="@string/rs"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="250dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:ems="10"/>

    <TextView
        android:id="@+id/extra"
        android:layout_width="100dp"
        android:layout_height="25sp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:fontFamily="serif"
        android:textColor="@color/colorPrimary"
        android:text="@string/extra"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/toddler"
        android:text="@string/toddler"
        android:drawableLeft="@drawable/ic_baseline_child_care_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:textColor="#000"
        android:ems="10"/>

    <ImageView
        android:id="@+id/minus"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_baseline_remove_circle_outline_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="300dp"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="295dp"
        android:text="@string/number"
        android:textColor="#000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="300dp"
        android:src="@drawable/ic_baseline_control_point_24" />

    <TextView
        android:id="@+id/price"
        android:text="@string/price"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="305dp"
        android:textColor="#000"
        android:textSize="15sp"
        android:ems="10"/>

    <TextView
        android:id="@+id/gps"
        android:text="@string/gps"
        android:drawableLeft="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textColor="#000"
        android:ems="10"/>

    <Button
        android:id="@+id/btnn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="120dp"
        android:textColor="#000"
        android:text="@string/btnn" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="345dp"
        />

    <TextView
        android:id="@+id/amt"
        android:text="@string/amt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="352dp"
        android:textColor="#000"
        android:textSize="15sp"
        android:ems="10"/>

    <TextView
        android:id="@+id/ac"
        android:text="@string/ac"
        android:drawableLeft="@drawable/ic_baseline_open_with_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:textColor="#000"
        android:ems="10"/>

    <Button
        android:id="@+id/bnn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="165dp"
        android:textColor="#000"
        android:text="@string/btnn" />

    <ImageView
        android:id="@+id/delet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="241dp"
        android:layout_marginTop="411dp"
        />

    <TextView
        android:id="@+id/amount"
        android:text="@string/amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="415dp"
        android:textColor="#000"
        android:textSize="17sp"
        android:ems="10"/>

    <EditText
        android:id="@+id/et_able"
        android:text="@string/able"
        android:drawableLeft="@drawable/ic_baseline_airline_seat_recline_normal_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:textColor="#000"
        android:textSize="15sp"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="480dp"
        />

    <ImageView
        android:id="@+id/delt"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="480dp"
        />

    <Button
        android:id="@+id/bn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="540dp"
        android:background="#545481"
        android:text="@string/bn"
        android:textColor="#fff" />

</RelativeLayout>




