<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#545481"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold|italic" /></RelativeLayout>

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_TextPersonName2"
        android:text="@string/name"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:ems="10"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/et_email"
        android:text="@string/email"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textColor="#000"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_Password"
        android:text="@string/password"
        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <EditText
        android:id="@+id/et_ConfirmPassword"
        android:text="@string/confirm"
        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="80dp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:background="#545481"
        android:textColor="#fff"
        android:text="@string/register" />





</RelativeLayout>
